Adding the fixes with swagger and error handling.
