# swagger.json
@@ -5,13 +5,24 @@
     "description": "Description",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "https://mbehymertodolist.onrender.com",
   "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
     "/": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/profile": {
       "get": {
         "description": "",
         "parameters": [],
@@ -47,7 +58,25 @@
                 "user": {
                   "example": "any"
                 },
-                "todo": {
+                "monday": {
+                  "example": "any"
+                },
+                "tuesday": {
+                  "example": "any"
+                },
+                "wednesday": {
+                  "example": "any"
+                },
+                "thursday": {
+                  "example": "any"
+                },
+                "friday": {
+                  "example": "any"
+                },
+                "saturday": {
+                  "example": "any"
+                },
+                "sunday": {
                   "example": "any"
                 }
               }
@@ -57,6 +86,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -102,7 +134,25 @@
                 "user": {
                   "example": "any"
                 },
-                "todo": {
+                "monday": {
+                  "example": "any"
+                },
+                "tuesday": {
+                  "example": "any"
+                },
+                "wednesday": {
+                  "example": "any"
+                },
+                "thursday": {
+                  "example": "any"
+                },
+                "friday": {
+                  "example": "any"
+                },
+                "saturday": {
+                  "example": "any"
+                },
+                "sunday": {
                   "example": "any"
                 }
               }
@@ -112,6 +162,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -131,6 +184,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
